--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "api": "^1.0.0",
+    "axios": "^0.18.0",
+    "font-awesome": "^4.7.0",
+    "style-loader": "^0.23.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
+    "vue-axios": "^2.1.4",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.0.2",
+    "vue-style-loader": "^3.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
